@@ -246,6 +246,7 @@ namespace Cumberland.Tests
 			s1.ShowLabels = true;
 			s1.LabelColor = Color.FromArgb(0,1,2,3);
 			s1.LabelFont = LabelFont.SansSerif;
+			s1.LabelFontEmSize = 1234;
 			l1.Styles.Add(s1);
 			
 			m1.Layers.Add(l1);
@@ -586,6 +587,12 @@ namespace Cumberland.Tests
 		public void TestStyleLabelColor()
 		{
 			Assert.AreEqual(Color.FromArgb(0,1,2,3), m2.Layers[0].Styles[0].LabelColor);
+		}
+
+		[Test]
+		public void TestStyleLabelFontEmSize()
+		{
+			Assert.AreEqual(1234, m2.Layers[0].Styles[0].LabelFontEmSize);
 		}
 				
 #endregion
