@@ -31,6 +31,7 @@
 				<Style>
 					<ShowLabels>true</ShowLabels>
 					<LabelFont>Monospace</LabelFont>
+					<LabelFontEmSize>8</LabelFontEmSize>
 					<Id>500001+</Id>
 					<LineWidth>1</LineWidth>
 					<LineStyle>None</LineStyle>
